# HelloBalls_Project

./: HelloBalls_CV3.py  HelloBalls_Serial.py
Gesture_training_result/: README.md  args.yaml  results.csv
Import_Gesture_Model/: CMakeLists.txt  README.md  convert_pt_to_onnx.py  gesture_yolo_api.cpp
Tranning_model/: README.md  convert_hagrid_json_to_yolo.py  data.yaml
